# Audio-or-It-Didn-t-Happen

./: .gitignore  README.md  main.py  pyproject.toml  setup.ps1
.cursor/skills/readme-generator/: SKILL.md
output/download_results/: download_results.parquet
output/elevenlabs_xml/: lotr_fellowship.xml
output/markdown/: .processing_state.pkl  lotr_fellowship.md
output/tts_txt/: lotr_fellowship.txt
src/: __init__.py  clean_text.py  processor.py  tts_converter.py  xml_converter.py
