[project]
name = "my-pdf-to-speech"
version = "0.1.0"
description = "PDF processing pipeline using GlossAPI for text-to-speech preparation"
requires-python = ">=3.8"
dependencies = [
    "glossapi[rapidocr,cuda]>=0.0.4.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "elevenlabs>=1.0.0",
    "pydub>=0.25.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



